# karlandben

./: .envrc.example  .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: check.yml  deploy.yml
deploy/: Caddyfile  karlandben.service  post-merge
migrations/: 20260408120000_init.sql  20260408130000_auth.sql  20260408140000_sessions.sql
src/: app.rs  database.rs  email.rs  handlers.rs  main.rs  models.rs  services.rs  session.rs  templates.rs
templates/: index.html  layout.html
templates/auth/: login.html  profile.html  register_name.html  signup.html  verify.html
