[package]
name = "karlandben"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.6"
axum = "0.8"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "migrate", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
